--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -11,4 +11,8 @@ jobs:
           node-version: '14'
       - run: npm install -g bats
       - run: bats -v
-      - run: touch test.txt
+      - run: echo "test4" >> README.md
+      - run: git add -A
+      - run: git commit -m "Auto updating TODO.txt"
+      - run: git fetch origin master
+      - run: git push origin main
