--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -11,14 +11,9 @@ jobs:
           node-version: '14'
       - run: npm install -g bats
       - run: bats -v
-    - name: Create file
-      run: echo "Hello, world!" > myfile.txt
-    - name: Commit and push changes
-      
-
-#     - run: echo "test4" >> test.txt
-     - run: git config --global user.name "Iker Ortiz"
-     - run: git add -A
-     - run: git commit -m "Auto updating"
-     - run: git fetch origin master
-     - run: git push origin main
+      - run: echo "Hello, world!" > myfile.txt
+      - run: git config --global user.name "Iker Ortiz"
+      - run: git add -A
+      - run: git commit -m "Auto updating"
+      - run: git fetch origin master
+      - run: git push origin main
