--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -11,9 +11,16 @@ jobs:
           node-version: '14'
       - run: npm install -g bats
       - run: bats -v
-      - run: echo "Hello, world!" > myfile.txt
+        #- run: echo "Hello, world!" > myfile.txt
       - run: git config --global user.name "Iker Ortiz"
       - run: git add -A
       - run: git commit -m "Auto updating"
       - run: git fetch origin master
       - run: git push origin main
+
+
+      - run: pip install virtualenv
+      - run: virtualenv mypython
+      - run: source mypython/bin/activate
+      - run: pip install -r . 
+
