--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -20,5 +20,6 @@ jobs:
       - run: pip install virtualenv
       - run: virtualenv mypython
       - run: source mypython/bin/activate
-      - run: pip install -r requirements.txt 
+      - run: conda env create -f environment.yml 
+      - run: conda activate techdoc
 
