--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -10,7 +10,7 @@ jobs:
         with:
           node-version: '14'
       - run: npm install -g bats
-      - run: apt-get install -y conda python3
+      - run: npm install -g conda python3
       - run: bats -v
       - run: echo "Hello, world!" > myfile.txt
       - run: git config --global user.name "Iker Ortiz"
