Added environment.yml file

--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -11,7 +11,7 @@ jobs:
           node-version: '14'
       - run: npm install -g bats
       - run: npm install -g conda python3
-      - run: pip install -g virtuaenv
+      - run: pip install virtuaenv
       - run: bats -v
       - run: echo "Hello, world!" > myfile.txt
       - run: git config --global user.name "Iker Ortiz"
