--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -22,6 +22,6 @@ jobs:
       - run: pip install virtualenv
       - run: virtualenv mypython
       - run: source mypython/bin/activate
-      - run: npm install -r requirements.txt
+      - run: pip install -r requirements.txt
       - run: conda activate techdoc
 
