--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -14,7 +14,8 @@ jobs:
       - run: npm install g virtualenv
       - run: bats -v
       - run: echo "Hello, world!" > myfile.txt
-      - run: git config --global user.name "Iker Ortiz"
+      - run: git config --global user.name "ikerortiluzu"
+      - run: git config --global user.mail "iker.ortiz@dipc.org"
       - run: git add -A
       - run: git commit -m "Auto updating"
       - run: git fetch origin master
