Added environment.yml file

--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -23,5 +23,6 @@ jobs:
       - run: pip install virtualenv
       - run: virtualenv mypython
       - run: source mypython/bin/activate
+      - run: conda init bash
       - run: conda activate techdoc
 
