--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-certifi @ file:///croot/certifi_1671487769961/work/certifi
+#certifi @ file:///croot/certifi_1671487769961/work/certifi
 charset-normalizer==3.0.1
 click==8.1.3
 colorama==0.4.6
