--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -23,5 +23,10 @@ jobs:
       - run: virtualenv mypython
       - run: source mypython/bin/activate
       - run: conda init bash
+      # Hasta aqui corre
+
+      - run: python -m pip --version 
+
+
         #      - run: conda activate techdoci
 
