--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -27,6 +27,8 @@ jobs:
 
       - run: python -m pip --version
       - run: pip install -r requirements.txt 
+      # Hasta aqui corre
+      - run: conda activate techdoc
 
 
         #      - run: conda activate techdoci
