--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -28,7 +28,8 @@ jobs:
       - run: python -m pip --version
       - run: pip install -r requirements.txt 
       # Hasta aqui corre
-      - run: conda activate techdoc
+      - run: conda env create -f environment.yml
+        #- run: conda activate techdoc
 
 
         #      - run: conda activate techdoci
