--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -9,16 +9,16 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
-      - run: npm install -g bats
-      - run: npm install -g conda python3
-      - run: bats -v
-      - run: echo "Hello, world!" >> myfile.txt
+            #- run: npm install -g bats
+            #- run: npm install -g conda python3
+            #- run: bats -v
+        #- run: echo "Hello, world!" >> myfile.txt
       - run: git config --global user.name "ikerortiluzu"
       - run: git config --global user.mail "iker.ortiz@dipc.org"
-      - run: git add -A
-      - run: git commit -m "Auto updating"
-      - run: git fetch origin master
-      - run: git push origin main
+        #- run: git add -A
+        #- run: git commit -m "Auto updating"
+        #- run: git fetch origin master
+        #- run: git push origin main
       - run: pip install virtualenv
       - run: virtualenv mypython
       - run: source mypython/bin/activate
@@ -28,4 +28,9 @@ jobs:
       # Hasta aqui corre
       #
       - run: mkdocs build
+                                                              
+        - run: git add -A
+        - run: git commit -m "Auto updating"
+        - run: git fetch origin master
+        - run: git push origin main
 
