--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -33,5 +33,5 @@ jobs:
       - run: git fetch origin master
       - run: git push origin main
       # Hasta aqui corre
-      - run: rsync -r sites/* ccadmin@cc.dipc.org:/var/www/vhosts/cc.dipc.org/httpdocs/computing_resources/
+      - run: rsync -r sites/ ccadmin@cc.dipc.org:/var/www/vhosts/cc.dipc.org/httpdocs/
 
