--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -33,6 +33,11 @@ jobs:
       - run: git fetch origin master
       - run: git push origin main
       # Hasta aqui corre
+      env:
+    SSH_PRIVATE_KEY: ${EDR}
+    REMOTE_HOST: atlas-edr.sw.ehu.es
+    REMOTE_USER: iortiz
+      
       - run: |
              ssh-keyscan -H atlas-edr.sw.ehu.es >> .ssh/known_hosts
              sshpass -p "joderCONdipc123$%&" ssh-copy-id -o StrictHostKeyChecking=no iortiz@atlas-edr.sw.ehu.es
