--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -2,7 +2,7 @@ name: github-actions-learn
 run-name: ${{ github.actor }} is learning GitHub Actions
 on: [push]
 env:
-SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+SSH_PRIVATE_KEY: ${{ secrets.EDR }}
 REMOTE_HOST: atlas-edr.sw.ehu.es
 REMOTE_USER: iortiz
 jobs:
