--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -38,9 +38,11 @@ jobs:
       - run: git push origin main
       # Hasta aqui corre
       - run: |
-             ssh-keyscan -H atlas-edr.sw.ehu.es >> .ssh/known_hosts
-             sshpass -p "joderCONdipc123$%&" ssh-copy-id -o StrictHostKeyChecking=no iortiz@atlas-edr.sw.ehu.es
-
+    mkdir -p .ssh
+    echo "$SSH_PRIVATE_KEY" > .ssh/id_rsa
+    chmod 600 .ssh/id_rsa
+    ssh-keyscan -H $REMOTE_HOST >> .ssh/known_hosts
+    sshpass -p "$REMOTE_PASSWORD" ssh-copy-id -i .ssh/id_rsa.pub $REMOTE_USER@$REMOTE_HOST
       
       
       
