--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,10 +1,10 @@
 name: github-actions-learn
 run-name: ${{ github.actor }} is learning GitHub Actions
 on: [push]
-env:
-  SSH_PRIVATE_KEY: ${{ secrets.EDR }}
-  REMOTE_HOST: atlas-edr.sw.ehu.es
-  REMOTE_USER: iortiz
+  #env:
+  #SSH_PRIVATE_KEY: ${{ secrets.EDR }}
+  #REMOTE_HOST: atlas-edr.sw.ehu.es
+  #REMOTE_USER: iortiz
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
