--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -17,8 +17,8 @@ jobs:
             #- run: npm install -g conda python3
             #- run: bats -v
         #- run: echo "Hello, world!" >> myfile.txt
-        #- run: git config --global user.name "ikerortiluzu"
-        #- run: git config --global user.mail "iker.ortiz@dipc.org"
+        - run: git config --global user.name "ikerortiluzu"
+        - run: git config --global user.mail "iker.ortiz@dipc.org"
         #- run: git add -A
         #- run: git commit -m "Auto updating"
         #- run: git fetch origin master
