--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -12,7 +12,7 @@ jobs:
             #- run: npm install -g bats
             #- run: npm install -g conda python3
             #- run: bats -v
-        #- run: echo "Hello, world!" >> myfile.txt
+        - run: echo "Hello, world!" >> myfile.txt
         - run: git config --global user.name "ikerortiluzu"
         - run: git config --global user.mail "iker.ortiz@dipc.org"
         #- run: git add -A
@@ -38,11 +38,7 @@ jobs:
              chmod 600 .ssh/id_rsa
              ssh-keyscan -H $REMOTE_HOST >> .ssh/known_hosts
              sshpass -p "$REMOTE_PASSWORD" ssh-copy-id -i .ssh/id_rsa.pub $REMOTE_USER@$REMOTE_HOST
-      
-      
-      
         #- run: rsync -r sites/ iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
-
   #env:
   #SSH_PRIVATE_KEY: ${{ secrets.EDR }}
   #REMOTE_HOST: atlas-edr.sw.ehu.es
