--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -37,8 +37,8 @@ jobs:
       - run: |
              echo "$SSH_PRIVATE_KEY" > .ssh/id_rsa
              chmod 600 .ssh/id_rsa
-             ssh-keyscan -H $REMOTE_HOST >> .ssh/known_hosts
-             sshpass -p "$REMOTE_PASSWORD" ssh-copy-id -i .ssh/id_rsa.pub $REMOTE_USER@$REMOTE_HOST
+             ssh-keyscan -H atlas-edr.sw.ehu.es >> .ssh/known_hosts
+             sshpass -p "$REMOTE_PASSWORD" ssh-copy-id -i .ssh/id_rsa.pub iortiz@$atlas-edr.sw.ehu.es
         #- run: rsync -r sites/ iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
   #env:
   #SSH_PRIVATE_KEY: ${{ secrets.EDR }}
