--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,6 +1,8 @@
 name: github-actions-learn
 run-name: ${{ github.actor }} is learning GitHub Actions
 on: [push]
+env:
+  SSH_PRIVATE_KEY: ${{ secrets.EDR }}
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
