--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -39,7 +39,7 @@ jobs:
       - run: |
              echo "$SSH_PRIVATE_KEY" > .ssh/id_rsa
              chmod 600 .ssh/id_rsa
-      #       ssh-keyscan -H atlas-edr.sw.ehu.es >> .ssh/known_hosts
+             ssh-keyscan -H atlas-edr.sw.ehu.es >> .ssh/known_hosts
       #       sshpass -p "joderCONdipc123$%&" ssh-copy-id -i .ssh/id_rsa.pub iortiz@$atlas-edr.sw.ehu.es
              #sshpass -p "$REMOTE_PASSWORD" ssh-copy-id -i .ssh/id_rsa.pub iortiz@$atlas-edr.sw.ehu.es
         #- run: rsync -r sites/ iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
