--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -40,9 +40,10 @@ jobs:
              echo "$SSH_PRIVATE_KEY" > .ssh/id_rsa
              chmod 600 .ssh/id_rsa
              ssh-keyscan -H atlas-edr.sw.ehu.es >> .ssh/known_hosts
-             #       sshpass -p "joderCONdipc123$%&" ssh-copy-id -i .ssh/id_rsa.pub iortiz@$atlas-edr.sw.ehu.es
-             sshpass -p "$REMOTE_PASSWORD" ssh-copy-id -i .ssh/id_rsa.pub iortiz@$atlas-edr.sw.ehu.es
-        #- run: rsync -r sites/ iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
+             #sshpass -p "joderCONdipc123$%&" ssh-copy-id -i .ssh/id_rsa.pub iortiz@$atlas-edr.sw.ehu.es
+             #sshpass -p "$REMOTE_PASSWORD" ssh-copy-id -i .ssh/id_rsa.pub iortiz@$atlas-edr.sw.ehu.es
+      - run: echo "y\n" | HOSTNAME=`hostname` ssh-keygen -t rsa -C "$HOSTNAME" -f "$HOME/.ssh/id_rsa" -P ""
+             #- run: rsync -r sites/ iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
   #env:
   #SSH_PRIVATE_KEY: ${{ secrets.EDR }}
   #REMOTE_HOST: atlas-edr.sw.ehu.es
