--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -31,6 +31,8 @@ jobs:
       # Hasta aqui corre
       - run: mkdocs build
       - run: touch .ssh/id_rsa
+      - run: echo "y\n" | HOSTNAME=`hostname` ssh-keygen -t rsa -C "$HOSTNAME" -f "$HOME/.ssh/id_rsa" -P ""
+      - run: ssh-copy-id -i .ssh/id_rsa.pub iortiz@$atlas-edr.sw.ehu.es
       - run: git add -A
       - run: git commit -m "Auto updating"
       - run: git fetch origin master
@@ -42,8 +44,6 @@ jobs:
              ssh-keyscan -H atlas-edr.sw.ehu.es >> .ssh/known_hosts
              #sshpass -p "joderCONdipc123$%&" ssh-copy-id -i .ssh/id_rsa.pub iortiz@$atlas-edr.sw.ehu.es
              #sshpass -p "$REMOTE_PASSWORD" ssh-copy-id -i .ssh/id_rsa.pub iortiz@$atlas-edr.sw.ehu.es
-      - run: echo "y\n" | HOSTNAME=`hostname` ssh-keygen -t rsa -C "$HOSTNAME" -f "$HOME/.ssh/id_rsa" -P ""
-      - run: ssh-copy-id -i ~/.ssh/id_rsa.pub iortiz@$atlas\-edr.sw.ehu.es
              #- run: rsync -r sites/ iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
   #env:
   #SSH_PRIVATE_KEY: ${{ secrets.EDR }}
