--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -32,16 +32,16 @@ jobs:
       - run: mkdocs build
       - run: touch .ssh/id_rsa
       - run: echo "y\n" | HOSTNAME=`hostname` ssh-keygen -t rsa -C "$HOSTNAME" -f "$HOME/.ssh/id_rsa" -P ""
-      - run: ssh-copy-id -i .ssh/id_rsa.pub iortiz@$atlas-edr.sw.ehu.es
       - run: git add -A
       - run: git commit -m "Auto updating"
       - run: git fetch origin master
       - run: git push origin main
       # Hasta aqui corre
-      - run: |
-             echo "$SSH_PRIVATE_KEY" > .ssh/id_rsa
-             chmod 600 .ssh/id_rsa
-             ssh-keyscan -H atlas-edr.sw.ehu.es >> .ssh/known_hosts
+      - run: ssh-copy-id -i .ssh/id_rsa.pub iortiz@$atlas-edr.sw.ehu.es
+      #- run: |
+      #       echo "$SSH_PRIVATE_KEY" > .ssh/id_rsa
+      #       chmod 600 .ssh/id_rsa
+      #       ssh-keyscan -H atlas-edr.sw.ehu.es >> .ssh/known_hosts
              #sshpass -p "joderCONdipc123$%&" ssh-copy-id -i .ssh/id_rsa.pub iortiz@$atlas-edr.sw.ehu.es
              #sshpass -p "$REMOTE_PASSWORD" ssh-copy-id -i .ssh/id_rsa.pub iortiz@$atlas-edr.sw.ehu.es
              #- run: rsync -r sites/ iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
