--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -30,7 +30,7 @@ jobs:
       - run: mkdocs build
       # Hasta aqui corre
       - run: mkdocs build
-      - run: touch .ssh/id_rsa
+        #- run: touch .ssh/id_rsa
       - run: ssh-keygen -t rsa -N ''
         #- run: echo "y\n" | HOSTNAME=`hostname` ssh-keygen -t rsa -C "$HOSTNAME" -f "$HOME/.ssh/id_rsa" -P "" > .ssh/id_rsa.pub
       - run: git add -A
