--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -29,11 +29,10 @@ jobs:
       - run: pip install -r requirements.txt 
       - run: mkdocs build
       # Hasta aqui corre
-      - run: mkdocs build
-        #- run: touch .ssh/id_rsa
       - run: ssh-keygen -t rsa -N '' -f .ssh/id_rsa <<< y
       - run: ls .ssh
-      - run: ssh-copy-id -i .ssh/id_rsa.pub iortiz@atlas-edr.sw.ehu.es <<< $SSH_PRIVATE_KEY
+      - run: ssh-copy-id -T /tmp -i .ssh/id_rsa.pub iortiz@atlas-edr.sw.ehu.es <<< $SSH_PRIVATE_KEY
+        #- run: ssh-copy-id -i .ssh/id_rsa.pub iortiz@atlas-edr.sw.ehu.es <<< $SSH_PRIVATE_KEY
       - run: git add -A
       - run: git commit -m "Auto updating"
       - run: git fetch origin master
