--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -2,12 +2,12 @@ name: github-actions-learn
 run-name: ${{ github.actor }} is learning GitHub Actions
 on: [push]
 env:
-  SSH_PRIVATE_KEY: ${{ secrets.EDR }}
   SSH_KEY: ${{ secrets.EDR }}
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
+      - shell: bash
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
@@ -34,7 +34,7 @@ jobs:
       - run: ssh-keygen -t rsa -N '' -f .ssh/id_rsa <<< y
       - run: ls .ssh
         #- run: ssh-copy-id -i .ssh/id_rsa.pub iortiz@atlas-edr.sw.ehu.es <<< $SSH_PRIVATE_KEY
-      - run: scp -i $SSH_KEY README.md iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
+      - run: scp -i "$SSH_KEY" README.md iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
       - run: git add -A
       - run: git commit -m "Auto updating"
       - run: git fetch origin master
