--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -33,7 +33,7 @@ jobs:
       - run: ssh-keygen -t rsa -N '' -f .ssh/id_rsa <<< y
       - run: ls .ssh
         #- run: ssh-copy-id -i .ssh/id_rsa.pub iortiz@atlas-edr.sw.ehu.es <<< $SSH_PRIVATE_KEY
-      - run: scp -i "$SSH_KEY" README.md iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
+      - run: scp -i ${{ secrets.EDR }} README.md iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
       - run: git add -A
       - run: git commit -m "Auto updating"
       - run: git fetch origin master
