--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -34,7 +34,7 @@ jobs:
       - run: ls .ssh
       - run: ls
         #- run: ssh-copy-id -i .ssh/id_rsa.pub iortiz@atlas-edr.sw.ehu.es <<< $SSH_PRIVATE_KEY
-      - run: scp README.md iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
+      - run: scp README.md iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz <<< ${{ secrets.EDR }}
       - run: git add -A
       - run: git commit -m "Auto updating"
       - run: git fetch origin master
