--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -11,6 +11,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
+          user: iortiz
+          host: atlas-edr.sw.ehu.es
+          pass: ${{ secrets.EDR }}
+
             #- run: npm install -g bats
             #- run: npm install -g conda python3
             #- run: bats -v
@@ -35,7 +39,7 @@ jobs:
       - run: ls .ssh
       - run: ls
         #- run: ssh-copy-id -i .ssh/id_rsa.pub iortiz@atlas-edr.sw.ehu.es <<< $SSH_PRIVATE_KEY
-      - run: shpass -p $SSH_EDR scp README.md iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
+      - run: shpass -p $pass scp README.md iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
       - run: git add -A
       - run: git commit -m "Auto updating"
       - run: git fetch origin master
