--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -3,6 +3,7 @@ run-name: ${{ github.actor }} is learning GitHub Actions
 on: [push]
 env:
   SSH_KEY: ${{ secrets.EDR }}
+  PATH: /usr/bin/:$PATH
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
