--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -67,4 +67,5 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           user: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_KEY }}
+      - run: ssh-keygen -t rsa -N '' -f .ssh/id_rsa <<< y
       - run: scp README.md iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
