--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -61,7 +61,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Copy single file to remote
-        uses: iortizdeluzu/github-action-scp@release
+        uses: actions/setup-node@v3
         with:
           local: README.md
           remote: scp/single/oof.txt
