--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -66,6 +66,6 @@ jobs:
           local: README.md
           remote: scp/single/oof.txt
           host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVERUSER }}
+          username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASS }}
       - run: scp README.md iortiz@atlas-edr.sw.ehu.es:/dipc/iortiz
