--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -60,9 +60,8 @@ jobs:
   second-job:
     runs-on: ubuntu-latest
     steps:
-      - name: Copy single file to remote
-        uses: actions/checkout@v3
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           local: README.md
           remote: scp/single/oof.txt
