--- a/.github/workflows/learning.github-acctions.yml
+++ b/.github/workflows/learning.github-acctions.yml
@@ -1,6 +1,7 @@
 name: scp copy folder to remote via SSH
 
-on: push
+on:
+  push
 
 jobs:
   build:
@@ -21,7 +22,68 @@ jobs:
         with:
           local: test
           remote: scp/directory
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVERUSER }}
-          password: ${{ secrets.SERVER_PASS }}
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.PASSWORD }}
           privateKey: ${{ secrets.PRIVATE_KEY}}
+      - name: Copy folder content recursively to remote (clean directory)
+        uses: ./
+        with:
+          local: test
+          remote: scp/directory
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.PASSWORD }}
+          privateKey: ${{ secrets.PRIVATE_KEY}}
+          rmRemote: true
+          dotfiles: true   
+      - name: Copy folder content recursively to remote (atomic put)
+        uses: ./
+        with:
+          local: test
+          remote: scp/atomic
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.PASSWORD }}
+          privateKey: ${{ secrets.PRIVATE_KEY}}
+          rmRemote: true
+          dotfiles: true        
+          atomicPut: true        
+      - name: Copy single file to remote
+        uses: ./
+        with:
+          local: test/oof.txt
+          remote: scp/single/readme.md
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.PASSWORD }}
+          privateKey: ${{ secrets.PRIVATE_KEY}}
+      - name: Copy dotfile to remote
+        uses: ./
+        with:
+          local: test/.dot.txt
+          remote: scp/single/.dot.txt
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.PASSWORD }}
+          privateKey: ${{ secrets.PRIVATE_KEY}}
+          dotfiles: true
+      - name: Copy with user/pw
+        uses: ./
+        with:
+          local: test/oof.txt
+          remote: scp/user/pw/oof.txt
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.PASSWORD }}     
+      - name: With ENV
+        uses: ./
+        with:
+          local: ${{ env.LOCAL }}
+          remote: scp/directory
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.PASSWORD }}
+          privateKey: ${{ secrets.PRIVATE_KEY}}
+          rmRemote: true
+          dotfiles: true  
