--- a/.github/workflows/learning.github-acctions.yml
+++ b/.github/workflows/learning.github-acctions.yml
@@ -22,19 +22,19 @@ jobs:
         with:
           local: test
           remote: scp/directory
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.PASSWORD }}
-          privateKey: ${{ secrets.PRIVATE_KEY}}
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          password: ${{ secrets.SERVER_PASS }}
+          privateKey: ${{ secrets.SERVER_KEY}}
       - name: Copy folder content recursively to remote (clean directory)
         uses: ./
         with:
           local: test
           remote: scp/directory
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.PASSWORD }}
-          privateKey: ${{ secrets.PRIVATE_KEY}}
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          password: ${{ secrets.SERVER_PASS }}
+          privateKey: ${{ secrets.SERVER_KEY}}
           rmRemote: true
           dotfiles: true   
       - name: Copy folder content recursively to remote (atomic put)
@@ -42,10 +42,10 @@ jobs:
         with:
           local: test
           remote: scp/atomic
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.PASSWORD }}
-          privateKey: ${{ secrets.PRIVATE_KEY}}
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          password: ${{ secrets.SERVER_PASS }}
+          privateKey: ${{ secrets.SERVER_KEY}}
           rmRemote: true
           dotfiles: true        
           atomicPut: true        
@@ -54,36 +54,36 @@ jobs:
         with:
           local: test/oof.txt
           remote: scp/single/readme.md
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.PASSWORD }}
-          privateKey: ${{ secrets.PRIVATE_KEY}}
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          password: ${{ secrets.SERVER_PASS }}
+          privateKey: ${{ secrets.SERVER_KEY}}
       - name: Copy dotfile to remote
         uses: ./
         with:
           local: test/.dot.txt
           remote: scp/single/.dot.txt
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.PASSWORD }}
-          privateKey: ${{ secrets.PRIVATE_KEY}}
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          password: ${{ secrets.SERVER_PASS }}
+          privateKey: ${{ secrets.SERVER_KEY}}
           dotfiles: true
       - name: Copy with user/pw
         uses: ./
         with:
           local: test/oof.txt
           remote: scp/user/pw/oof.txt
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.PASSWORD }}     
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          password: ${{ secrets.SERVER_PASS }}     
       - name: With ENV
         uses: ./
         with:
           local: ${{ env.LOCAL }}
           remote: scp/directory
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.PASSWORD }}
-          privateKey: ${{ secrets.PRIVATE_KEY}}
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          password: ${{ secrets.SERVER_PASS }}
+          privateKey: ${{ secrets.SERVER_KEY}}
           rmRemote: true
           dotfiles: true  
