--- a/.github/workflows/learning.github-acctions.yml
+++ b/.github/workflows/learning.github-acctions.yml
@@ -60,6 +60,10 @@ jobs:
   second-job:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '14'
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
         with:
