--- a/.github/workflows/learning.github-acctions.yml
+++ b/.github/workflows/learning.github-acctions.yml
@@ -77,5 +77,5 @@ jobs:
         #run: rsync -avz README.md ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/iker/
         run: echo ${{ secrets.SSH_HOST }}
       - name: ping to Iker
-        run: ping ${{ secrets.SSH_HOST }} 
+        run: ping 158.227.108.220 
                       
