--- a/.github/workflows/learning.github-acctions.yml
+++ b/.github/workflows/learning.github-acctions.yml
@@ -69,13 +69,13 @@ jobs:
           #key: ${{ secrets.SSH_PRIVATE_KEY }}
           key: ${{ secrets.SSH_PUBLIC_KY }}
           known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
-      - name: Adding Known Hosts
-        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+            #- name: Adding Known Hosts
+        #run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
       - name: get IP
         run: ip a
       - name: Deploy with rsync
         run: ls
           #run: rsync -avz README.md ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/iker/
-      - name: ping to Iker
-        run: ping 158.227.108.220 
+      - name: cp test
+        run: cp README.mc README.test
                       
