--- a/.github/workflows/learning.github-acctions.yml
+++ b/.github/workflows/learning.github-acctions.yml
@@ -70,7 +70,7 @@ jobs:
           key: ${{ secrets.SSH_PUBLIC_KY }}
           known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
             #- name: Adding Known Hosts
-        #run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> .ssh/known_hosts
       - name: get IP
         run: ip a
       - name: Deploy with rsync
