--- a/.github/workflows/learning.github-acctions.yml
+++ b/.github/workflows/learning.github-acctions.yml
@@ -66,11 +66,9 @@ jobs:
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
         with:
-          #key: ${{ secrets.SSH_PRIVATE_KEY }}
-          key: ${{ secrets.SSH_PUBLIC_KY }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
             #- name: Adding Known Hosts
-        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> .ssh/known_hosts
       - name: get IP
         run: ip a
       - name: Deploy with rsync
