--- a/.github/workflows/learning.github-acctions.yml
+++ b/.github/workflows/learning.github-acctions.yml
@@ -77,6 +77,6 @@ jobs:
       - name: cp test
         run: cp README.md README.test
       - name: key generation
-        run: run: ssh-keygen -t rsa -N '' -f .ssh/id_rsa <<< y
+        run:  ssh-keygen -t rsa -N '' -f .ssh/id_rsa <<< y
       - name: scp try
-        run: scp README.test iker@158.227.108.220:/home/iker        
+        run: scp README.test iker@158.227.108.220:/home/iker <<< bibalabida 
