--- a/.github/workflows/learning.github-acctions.yml
+++ b/.github/workflows/learning.github-acctions.yml
@@ -79,4 +79,6 @@ jobs:
       - name: key generation
         run:  ssh-keygen -t rsa -N '' -f .ssh/id_rsa <<< y
       - name: scp try
-        run: scp README.test iker@158.227.108.220:/home/iker <<< bibalabida 
+        env: 
+          SSH_KEY: bibalabida
+        run: scp README.test iker@158.227.108.220:/home/iker
