--- a/.github/workflows/learning.github-acctions.yml
+++ b/.github/workflows/learning.github-acctions.yml
@@ -83,6 +83,6 @@ jobs:
       - name: id_rsa.pub
         run: cat .ssh/id_rsa.pub
       - name: ping
-        run: ping 158.227.108.220
+        run: ping -c 5 158.227.108.220
           #      - name: scp try
           #        run: scp README.test iker@158.227.108.220:/home/iker
